fixing grid alignment and taking out flip card styling

--- a/src/index.css
+++ b/src/index.css
@@ -11,37 +11,3 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
-
-.flip-card {
-  background-color: transparent;
-  width: auto;
-  height: 200px;
-  perspective: 1000px; /* Remove this if you don't want the 3D effect */
-  margin-top: 20px;
-}
-
-.flip-card-inner {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  text-align: center;
-  transition: transform 0.8s;
-  transform-style: preserve-3d;
-}
-
-.flip-card-front,
-.flip-card-back {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  -webkit-backface-visibility: hidden; /* Safari */
-  backface-visibility: hidden;
-}
-
-.flip-card:hover .flip-card-inner {
-  transform: rotateY(180deg);
-}
-
-.flip-card-back {
-  transform: rotateY(180deg);
-}
